# geotemporal_uuid

./: .gitignore  Cargo.toml  LICENSE  README.md  serve_demo.sh
.github/workflows/: ci.yml  pages.yml
src/: lib.rs  main.rs
www/: index.html
