[package]
name = "geotemporal_uuid"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4.3"
rand = "0.9.2"
wasm-bindgen = "0.2.108"
